@@ -1,3 +1,8 @@
+2017-11-26         Andrew J. Schorr     <ajschorr@fedoraproject.org>
+
+	* make_extension_directory.sh: Add -s option to print spec.in to
+	stdout and exit. This is useful for upgrading old spec.in packaging.
+
 2017-11-25         Andrew J. Schorr     <ajschorr@fedoraproject.org>
 
 	* make_extension_directory.sh: Update spec file template to Fedora
